table formatting, some fixes

--- a/_static/fin377_specialformatting.css
+++ b/_static/fin377_specialformatting.css
@@ -69,3 +69,13 @@ ul.sidenav_l1:not(.current) {
 }
 
 .tocsection.onthispage
+
+/* tables on the site have excessive spacing */
+
+.table { 
+	line-height: 0.5em
+}	
+
+table p {
+	margin-bottom: 0
+}
